--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ document.getElementById("yesBtn").addEventListener("click", function() {
 //    noBtn.style.left = x + "px";
 //    noBtn.style.top = y + "px";
 // });
-<button id="noBtn">No</button>
+//<button id="noBtn">No</button>
 
 const noBtn = document.getElementById("noBtn");
 
@@ -430,5 +430,6 @@ setInterval(createHeart, 500);
 
 </body>
 </html>
+
 
 
